--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,8 @@ nav:
     - Contributing: 
       - Architecture: "Architecture.md"
       - Contributing: "Contributing.md"
-    - Credits: "Credits.md"
+    - About the Contributors: 
+      - "Credits.md"
       # - Platform Independence: Features/Platform_Independence.md
       # - Open and Readable: Features/Open_and_Readable.md
       # - Flexible Architecture: Features/Flexible_Architecture.md
@@ -64,7 +65,7 @@ nav:
 
 theme:
   name: material
-  custom_dir: docs/overrides
+  custom_dir: extras/overrides
   highlightjs: true
   features:
     - announce.dismiss
